Try Add sonar test 2