@@ -11,7 +11,6 @@ import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
@@ -53,7 +52,7 @@ public class CreateDeleteService {
     @Transactional
     public List<Book> saveBooks(List<Book> books) {
         return books.stream()
-                .map(this::saveBook) // Используем уже существующую логику сохранения
-                .collect(Collectors.toList());
+                .map(this::saveBook)
+                .toList();
     }
 }
